2002-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add
	(featurep 'mule) and (featurep 'file-coding).

2002-05-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-download): Modify string of the prompt.
	(w3m-prepare-content): Add 5th optional argument `retry'. If not
	determine content-type, ask its.

2002-05-07  Yoichi NAKAYAMA  <yoichi@FreeBSD.org>

	* shimbun/sb-savannah.el: New file.

2002-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug): Bind `after-load-alist' to
	nil while loading the file itself; examine system info in the
	`w3m-mode' buffer.

2002-04-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add
	`mule-version' and `Meadow-version'.
	(report-emacs-w3m-bug): Fix when info is a function.

	* w3m.el (w3m-menubar): Add many functions.

2002-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el: New file.

	* w3m.el: Autoload "w3m-bug" for `report-emacs-w3m-bug'.
	(w3m-lynx-like-map): Bind `report-emacs-w3m-bug' to C-cb.
	(w3m-info-like-map): Ditto.

	* w3m-om.el (compose-mail): New function.

	* w3mhack.el: Check for the validity on APEL.

2002-04-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-arrived-modify): New function.
	(w3m-local-attributes): If set Content-type in arrived DB, return
	it.
	(w3m-redisplay-this-page, w3m-redisplay-and-reset)
	(w3m-redisplay-with-content-type): New commands.
	(w3m-redisplay-with-charset): Use `w3m-arrived-modify'.
	(w3m-lynx-like-map): Bind all new commands and modify bind for
	`w3m-redisplay-with-charset'.
	(w3m-info-like-map): Ditto.
	(w3m-mode): Document them.
	(w3m-goto-url): If reload is 'redisplay, do redisplay only. Modify
	content-type decided method at local URL.
	(w3m-about-header): Display `Modifer Information'.
	(w3m-header-line-insert): Display modifers when type are setting.

2002-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>
