@@ -52,25 +52,42 @@
   (let ((apel (locate-library "path-util"))
 	(emu (locate-library "pccl")))
     (if (and apel emu)
-	(when (and (featurep 'xemacs)
-		   (not (featurep 'mule)))
+	(when (featurep 'xemacs)
 	  (setq apel (file-name-directory apel)
 		emu (file-name-directory emu))
 	  (if (not (string-equal apel emu))
 	      (setq apel (concat apel "\n  " emu)))
-	  (condition-case nil
-	      (require 'pccl)
-	    (error (error "%s%s%s"
-			  "
-Error: Maybe the APEL package has been compiled for XEmacs with MULE,
- you use non-MULE XEmacs to build emacs-w3m though.  The APEL modules
- are installed in:\n\n  "
-			  apel
-			  "\n
- If you use the official APEL XEmacs package, look for the new one and
- install it in your system, or send a bug report to the maintainers
- using `M-x report-xemacs-bug'.  Otherwise, you may rebuild APEL from
- the source distribution, see manuals where you could get it from."))))
+	  (unless (if (featurep 'mule)
+		      (condition-case nil
+			  (progn
+			    ;; Checking whether APEL has been compiled for
+			    ;; XEmacs with MULE.
+			    (require 'pccl)
+			    (featurep 'pccl-20))
+			(error nil))
+		    (condition-case nil
+			;; Checking whether APEL has been compiled for
+			;; XEmacs without MULE (whether `pccl' does not
+			;; require `ccl').
+			(require 'pccl)
+		      (error nil)))
+	    (error "\nError: %s%s%s%s\n"
+		   (if (featurep 'mule)
+		       "\
+APEL package seems to have been compiled for non-MULE XEmacs,
+ even though you are using XEmacs with MULE to build emacs-w3m."
+		     "\
+APEL package seems to have been compiled for XEmacs with MULE,
+ even though you are using non-MULE XEmacs to build emacs-w3m.")
+		   "  APEL
+ modules are installed in:\n\n  "
+		   apel
+		   "\n
+ If you are using the official APEL XEmacs package (or possibly SUMO),
+ look for the new one and install it in your system, or send a bug
+ report to the maintainers using `M-x report-xemacs-bug'.  Otherwise,
+ you may rebuild APEL from the source distribution, see manuals where
+ you could get it from.")))
       (error "
 Error: You have to install APEL before building emacs-w3m, see manuals.
  If you have already installed APEL in the non-standard Lisp directory,
